--- a/aula-01.html
+++ b/aula-01.html
@@ -8,24 +8,26 @@
 <body>
     <h1>Trabalhando com Listas</h1>
     <h2>Listas Ordenadas</h2>
-    <ol type="A" start="4"> <!-- 1 A a I i -->
+    <ol type="a" start="6"> <!-- 1 A a I i -->
         <li>Acordar</li>
         <li>Ligar para o João</li>
         <li>Tomar café</li>
         <li>Escovar os dentes</li>
         <li>Ir para a faculdade</li>
         <li>Almoçar</li>
+        <li>Pudim</li>
         <li>Ir para o Trabalho</li>
         <li>Voltar para casa</li>
         <li>Jantar</li>
         <li>Dormir</li>
     </ol>
     <h2>Lista não Ordenadas</h2>
-    <ul type="disc"> 
+    <ul type="square"> 
         <!-- disc circle square -->
         <li>Pão</li>
         <li>Leite</li>
         <li>Tomate</li>
+        <li>Bolacha</li>
         <li>Manteiga</li>
         <li>Arroz</li>
         <li>Feijão</li>
@@ -46,6 +48,20 @@
         <li>JavaScript</li>
         <li>Kotlin</li>
     </ol>
-</ol>
+    <h2>Lista Ordenada das Turmas</h2>
+    <li>Turma P1</li>
+    <ol type="a" start="1"> <!-- 1 A a I i --> 
+    <li>Ana</li>
+    <li>Paulo</li>
+    <li>Pedro</li>
+    <h2></h2>
+    </ol>
+<li>Turma P2</li>
+<ol type="I" start="1"> <!-- 1 A a I i --> 
+<li>João</li>
+<li>Lucas</li>
+<li>André</li>
+
+ </ol>
 </body>
 </html>
